--- a/utilitySavingsTool/utilitySavingsToolStyle.css
+++ b/utilitySavingsTool/utilitySavingsToolStyle.css
@@ -1,14 +1,17 @@
-body {
+body * {
   margin: 0;
-  padding: 0
+  padding: 0;
 }
 
 select {
   padding-left: 5px;
+  position: absolute;
+  border: 1.5px solid black;
 }
 
 h4 {
   padding-left: 5px;
+  position: absolute;
 }
 
 .axis path {
