--- a/utilitySavingsTool/utilitySavingsToolStyle.css
+++ b/utilitySavingsTool/utilitySavingsToolStyle.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-.UtilitySavingsToolOuter select {
+.UtilitySavingsToolDropdown {
   padding-left: 5px;
   position: absolute;
   border: 1.5px solid black;
